Fixed bug with test connection on LLP and File.