@@ -1,6 +1,6 @@
 package com.webreach.mirth.connectors.file;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 
 import com.webreach.mirth.connectors.ConnectorService;
@@ -12,9 +12,23 @@ public class FileReaderService implements ConnectorService {
     public Object invoke(String method, Object object, String sessionsId) throws Exception {
         if (method.equals("testRead")) {
             Map<String, String> params = (Map<String, String>) object;
+            String fileHost = null;
             String scheme = params.get(FileReaderProperties.FILE_SCHEME);
-            URL address = new URL(params.get(FileReaderProperties.FILE_HOST));
-            String dir = params.get(FileReaderProperties.FILE_DIRECTORY);
+            String host = null;
+            int port = 0;
+            String dir = null;
+
+            if (scheme.equals(FileReaderProperties.SCHEME_FILE)) {
+                fileHost = params.get(FileReaderProperties.FILE_HOST);
+                dir = params.get(FileReaderProperties.FILE_HOST);
+            } else {
+                URI address = new URI(scheme + "://" + params.get(FileReaderProperties.FILE_HOST));
+                fileHost = address.toString();
+                host = address.getHost();
+                port = address.getPort();
+                dir = address.getPath();
+            }
+
             String username = params.get(FileReaderProperties.FILE_USERNAME);
             String password = params.get(FileReaderProperties.FILE_PASSWORD);
             boolean passive = false;
@@ -23,13 +37,18 @@ public class FileReaderService implements ConnectorService {
                 passive = Boolean.parseBoolean(params.get(FileWriterProperties.FILE_PASSIVE_MODE));
             }
 
-            FileSystemConnectionFactory factory = new FileSystemConnectionFactory(scheme, username, password, address.getHost(), address.getPort(), passive);
-            FileSystemConnection connection = (FileSystemConnection) factory.makeObject();
+            FileSystemConnectionFactory factory = new FileSystemConnectionFactory(scheme, username, password, host, port, passive);
 
-            if (connection.canRead(dir)) {
-                return new ConnectionTestResponse(ConnectionTestResponse.Type.SUCCESS, "Sucessfully connected to: " + dir);
-            } else {
-                return new ConnectionTestResponse(ConnectionTestResponse.Type.FAILURE, "Unable to connect to: " + dir);
+            try {
+                FileSystemConnection connection = (FileSystemConnection) factory.makeObject();
+
+                if (connection.canRead(dir)) {
+                    return new ConnectionTestResponse(ConnectionTestResponse.Type.SUCCESS, "Sucessfully connected to: " + fileHost);
+                } else {
+                    return new ConnectionTestResponse(ConnectionTestResponse.Type.FAILURE, "Unable to connect to: " + fileHost);
+                }
+            } catch (Exception e) {
+                return new ConnectionTestResponse(ConnectionTestResponse.Type.FAILURE, "Unable to connect to: " + fileHost);
             }
         }
 
